--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+# GitHub repo where your .zshrc and .gitconfig is located. 
+# See https://github.com/thisistonydang/dotfiles for an example.
+# This is optional. Use an an empty string to skip. (e.g. DOTFILES="")
+DOTFILES_REPO=thisistonydang/dotfiles
+
 # IP address of the server to set up
 IP=0.0.0.0
 
